--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react": "^16.13.1",
     "react-datepicker": "^2.16.0",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.10.0",
+    "react-modal": "^3.11.2",
     "react-moment": "^0.9.7",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
