--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fluentui/react": "^7.116.0",
     "@react-google-maps/api": "^1.9.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@uifabric/react-cards": "^0.109.89",
     "axios": "^0.19.2",
     "date": "^1.0.2",
     "formik": "^2.1.4",
