--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^16.13.1",
     "react-datepicker": "^2.16.0",
     "react-dom": "^16.13.1",
+    "react-facebook-login": "^4.1.1",
     "react-icons": "^3.10.0",
     "react-modal": "^3.11.2",
     "react-moment": "^0.9.7",
