--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@uifabric/react-cards": "^0.109.89",
+    "apexcharts": "^3.19.2",
     "axios": "^0.19.2",
     "date": "^1.0.2",
     "formik": "^2.1.4",
     "moment": "^2.26.0",
     "picker": "^0.1.4",
     "react": "^16.13.1",
+    "react-apexcharts": "^1.3.7",
     "react-datepicker": "^2.16.0",
     "react-dom": "^16.13.1",
     "react-facebook-login": "^4.1.1",
@@ -31,6 +33,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^2.3.0",
     "yup": "^0.29.0"
   },
   "scripts": {
