--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-slick": "^0.26.1",
+    "react-spring": "^8.0.27",
     "react-toastify": "^6.0.5",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
