--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.2",
     "date": "^1.0.2",
     "formik": "^2.1.4",
+    "geolib": "^3.3.1",
     "moment": "^2.26.0",
     "picker": "^0.1.4",
     "react": "^16.13.1",
