--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-apexcharts": "^1.3.7",
     "react-datepicker": "^2.16.0",
     "react-dom": "^16.13.1",
+    "react-emoji": "^0.5.0",
     "react-facebook-login": "^4.1.1",
     "react-icons": "^3.10.0",
     "react-modal": "^3.11.2",
@@ -28,6 +29,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-scroll-to-bottom": "^2.0.0",
     "react-slick": "^0.26.1",
     "react-spring": "^8.0.27",
     "react-toastify": "^6.0.5",
